app_controllers/infrastructure/kubernetes-deployments/pods/gitlab/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: gitlab-charles
  annotations:
    kubernetes.io/ingress.class: traefik
    kubernetes.io/preserve-host: "true"
    traefik.frontend.passHostHeader: "false"
    traefik.frontend.priority: "1"
spec:
  rules:
  - host: gitlab-charles.us-west1-a.securethebox.us
    http:
      paths:
      - path: /
        backend:
          serviceName: gitlab-charles
          servicePort: http

# git push --set-upstream http://gitlab-charles.us-west1-a.securethebox.us/root/juice-shop-charles.git master
